--- a/.github/workflows/ml_pipeline.yml
+++ b/.github/workflows/ml_pipeline.yml
@@ -42,4 +42,37 @@ jobs:
           name: ml-artifacts
           path: |
             models/
-            data/
+            data/L Pipeline CI/CD
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+
+jobs:
+  build-and-train:
+    runs-on: ubuntu-latest
+
+    ste
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run data loading
+        run: python src/load_data.py
+
+      - name: Run preprocessing
+        run: python src/preprocess.py
+
+      - name: Train model
+        run: python 
